--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "openai": "^4.94.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-facebook": "^9.0.12",
+    "react-facebook": "^9.0.12"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
